# archimedes

./: README.md  exploratory.ipynb  gmo_plot_data.ipynb  merged_data.csv  normalizes_script.ipynb  pyproject.toml  read_in_education.ipynb  read_in_owd.ipynb
data/in/: AverageYearsofEducation_Compact(Data Clio Infra Format).csv  annual-patent-applications.csv  military-spending-gmsd.csv  nobel_laureates.html  patents_filed_from_1883_to_1979.csv  share-of-the-population-with-completed-tertiary-education.csv  total-government-expenditure-on-education-gdp.csv
data/in/clio/: AverageYearsofEducation_Compact.xlsx
data/in/victor/: armed-forces-personnel-percent.csv  md2010_horizontal.xlsx  md2010_horizontal_cleaned.xlsx  military-spending-as-a-share-of-gdp-sipri.csv  nuclear-warhead-inventories.csv
scripts/: helpers.py  normalize_to_country.py  read_from_clio.py  read_from_owid.py  read_from_wipo.py  read_in_education.ipynb  read_md_horizontal.py  read_nobel_laureates.py
