[project]
name = "archimedes"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "country-converter (>=1.3.1,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
